<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="percent10">10%</string>
    <string name="percent15">15%</string>
    <string name="percent20">20%</string>
    <string name="zero_label">$ 0.00</string>
    <string name="bill_amount_label">Enter the bill amount</string>

</resources>
