<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculator" >

    <Button
        android:id="@+id/btnPercent15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="calculatePercent15"
        android:text="@string/percent15" />

    <Button
        android:id="@+id/btnPercent10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPercent15"
        android:layout_alignBottom="@+id/btnPercent15"
        android:layout_toLeftOf="@+id/btnPercent15"
        android:onClick="calculatePercent10"
        android:text="@string/percent10" />

    <Button
        android:id="@+id/btnPercent20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPercent15"
        android:layout_toRightOf="@+id/btnPercent15"
        android:onClick="calculatePercent20"
        android:text="@string/percent20" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPercent15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/zero_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPercent15"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="@string/bill_amount_label" />

</RelativeLayout>
